--- a/style/style.css
+++ b/style/style.css
@@ -108,6 +108,21 @@ div.note {
   background-color: #bed3ec;
   border: solid 5px #dfedff;
   }
+  
+  
+div.protip {
+  padding: 1em;
+  margin: 1em 0;
+  padding-left: 100px;
+  background-image: url("../figs/protip.png");
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 15px center;
+  min-height: 120px;
+  color: #75658c;
+  background-color: #dbceefab;
+  border: solid 5px #d8c1f7;
+  }
 
 
 .MathJax {
