--- a/style/style.css
+++ b/style/style.css
@@ -82,44 +82,6 @@ blockquote p {
 }
 
 
-
-
-
-/* -----------div tips------------- */
-.note {
-  padding: 1em;
-  margin: 1em 0;
-  padding-left: 100px;
-  background-image: url("../figs/tools2.png");
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: 15px center;
-  min-height: 120px;
-  color: #1f5386;
-  background-color: #bed3ec;
-  border: solid 5px #dfedff;
-  }
-  
-  
-.protip {
-  padding: 1em;
-  margin: 1em 0;
-  padding-left: 100px;
-  background-image: url("../figs/protip.png");
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: 15px center;
-  min-height: 120px;
-  color: #75658c;
-  background-color: #dbceefab;
-  border: solid 5px #d8c1f7;
-  }
-
-
-.MathJax {
-  font-size: 150%;
-}
-
 /* Style author */
 .author {
     font-family: 'Crimson Text', serif;
@@ -176,7 +138,11 @@ blockquote p {
   width: 30%;
 }
 
-/* Style notes */
+/* Style math */
+.MathJax {
+  font-size: 150%;
+}
+
 .math {
   font-size: 190%;
 }
