--- a/docs/assets/sticky-notes.css
+++ b/docs/assets/sticky-notes.css
@@ -1,82 +1,62 @@
-/* -----------Blue Tools Note------------- */
-.note {
+/* -----------To-Do Note------------- */
+.todo {
   padding: 1em;
-  margin: 1em 0;
-  padding-left: 100px;
-  background-image: url("../figs/tools2.png");
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: 15px center;
+  margin: 0 0;
+  padding-left: 15px;
+  padding-top: 15px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
   min-height: 120px;
-  color: #1f5386;
-  background-color: #bed3ec;
-  border: solid 5px #dfedff;
+  color: #000000;
+  background-color: #fffdc0;
+  border: solid 3px #ffb71e;
+  border-radius: 25px;
   }
   
 
-/* -----------Purple Protip Note------------- */
+/* -----------Protip Note (Centered)------------- */
 
 .protip {
   padding: 1em;
   margin: 1em 0;
-  padding-left: 100px;
-  background-image: url("../figs/protip.png");
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: 15px center;
-  min-height: 120px;
-  color: #75658c;
-  background-color: #dbceefab;
-  border: solid 5px #d8c1f7;
+  padding-left: 15px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  display: table;
+  vertical-align: middle;
+  color: #000;
+  background-color: #fffdc0;
+  border: solid 3px #ffb71e;
+  box-shadow: 20px 38px 34px -26px hsla(0,0%,0%,.2);
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  border-bottom-right-radius: 225px 15px;
+  border-bottom-left-radius:15px 255px;
   }
   
 
-/* -----------Opal FYI Note------------- */
+/* -----------FYI Note (Left-Aligned)------------- */
 
 .fyi {
   padding: 1em;
   margin: 1em 0;
-  padding-left: 100px;
-  background-image: url("../figs/fyi.png");
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: 15px center;
-  min-height: 120px;
-  color: #326273;
-  background-color: #b7ccccab;
-  border: dashed 5px #82a7a6;
-  }
-  
-  
-  /* -----------Exercises Note------------- */
-  
-.exercises {
-  padding: 1em;
-  margin: 1em 0;
-  padding-left: 100px;
-  background-image: url("../figs/brain.png");
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: 15px center;
-  min-height: 120px;
-  color: #264653;
-  background-color: #D3D9D4AB;
-  border: solid 3px #264653;
-  }
-  
-  
-  /* -----------Orange Learn More Note------------- */
-.learnmore {
-  padding: 1em;
-  margin: 1em 0;
-  padding-left: 100px;
-  background-image: url("../figs/magnifying-glass.png");
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: 15px center;
-  min-height: 120px;
-  background-color: #ffcc80;
-  border: solid 5px #F28C28;
+  padding-left: 15px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  display: table;
+  vertical-align: middle;
+  color: #000;
+  background-color: #fffdc0;
+  border: solid 3px #ffb71e;
+  box-shadow: 20px 38px 34px -26px hsla(0,0%,0%,.2);
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  border-bottom-right-radius: 225px 15px;
+  border-bottom-left-radius:15px 255px;
   }
   
 
@@ -86,14 +66,30 @@
   padding: 1em;
   margin: 1em 0;
   padding-left: 100px;
-  background-image: url("../figs/math.png");
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-position: 15px 15px;
   min-height: 120px;
-  color: #326273;
-  background-color: #bdc7bfab;
+  color: #000;
+  background-color: #edeeea;
   border: dashed 5px #869889;
   }  
   
   
+/* -----------Yellow Interpretation Note------------- */
+
+.interpret {
+  padding: 1em;
+  margin: 1em 0;
+  padding-left: 100px;
+  background-image: url("../img/interpret.png");
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 15px 50%;
+  min-height: 120px;
+  color: #264653;
+  background-color: #fffeaaab;
+  border: solid 3px #264653;
+  border-radius: 25px;
+  }  
+
+.interpret h5{
+  margin-bottom: -20px;
+}
