--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -239,3 +239,10 @@ figure.quarto-float-tbl figcaption.quarto-float-caption-top {
 #references {
   margin-bottom: 5em;
 }
+
+/** Make Seach button accessible **/
+button.aa-SubmitButton {
+  width: 24px;
+  height: 24px;
+}
+
